# repolens_p1

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docs/: architecture.md
eval/: fastapi_questions.json  results.json  results_after.json
repolens/: api.py  chunk_text.py  config.py  llm.py  models.py
repolens/evaluation/: __main__.py  evaluator.py
repolens/generation/: generator.py  prompts.py
repolens/ingestion/: chunker.py  indexer.py  loader.py
repolens/retrieval/: intent.py  retriever.py
repolens/scripts/: evaluate.py  ingest.py  query.py  serve.py
tests/unit/: test_api.py  test_evaluator.py  test_generator.py  test_intent.py  test_retriever.py
