[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "repolens"
version = "0.1.0"
description = "Query any GitHub repository in natural language using code-aware RAG"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sahithi Akunoor" }]
keywords = ["rag", "llm", "code-search", "ast", "tree-sitter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
repolens-ingest  = "repolens.scripts.ingest:main"
repolens-serve   = "repolens.scripts.serve:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["repolens*"]

# ── Ruff (linter) ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ── Black (formatter) ─────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]

# ── Mypy (type checker) ───────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
